--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^4.0.6",
     "material-symbols": "^0.2.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
